--- a/1/Dockerfile
+++ b/1/Dockerfile
@@ -1,4 +1,15 @@
-FROM ubuntu:latest
-LABEL authors="kdani"
+FROM node:21
 
-ENTRYPOINT ["top", "-b"]
+WORKDIR /usr/src/app
+
+COPY . .
+
+RUN npm install
+
+#RUN npm run build
+
+RUN rm -rf ./src
+
+EXPOSE 4000
+
+CMD ["npm", "run", "start"]
