--- a/2/Dockerfile
+++ b/2/Dockerfile
@@ -1,4 +1,17 @@
-FROM ubuntu:latest
-LABEL authors="kdani"
+FROM node:21
 
-ENTRYPOINT ["top", "-b"]
+WORKDIR /app/react-app
+
+COPY package.json .
+
+RUN npm install
+
+COPY . .
+
+#RUN npm run build
+
+#RUN rm -rf ./src
+
+EXPOSE 5173
+
+CMD ["npm", "run", "preview"]
