--- a/1/package.json
+++ b/1/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./1/core.js"
+    "dev": "nodemon ./core.js",
+    "start": "node ./core.js"
   },
   "keywords": [],
   "author": "",
