--- a/2/package.json
+++ b/2/package.json
@@ -6,17 +6,25 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "prod": "vite preview",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write \"src/**/*.jsx\" \"src/**/*.js\""
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.2",
     "autoprefixer": "^10.4.18",
+    "axios": "^1.6.8",
     "compose-function": "^3.0.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "flowbite-react": "^0.7.2",
     "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
+    "react-redux": "^9.1.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.1"
